<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:background="@android:color/white"
    tools:context="com.example.zgbeautyandhair.CardFrontFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/black"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />


        <androidx.cardview.widget.CardView
            android:id="@+id/rl_card"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_margin="16dp"
            android:padding="16dp"
            app:cardElevation="5dp"
            android:translationY="100dp"
            app:cardBackgroundColor="#343739"
            app:cardCornerRadius="10dp">


            <ImageView
                android:id="@+id/mastercard_logo"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/mc_symbol_opt_73_3x" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kredit_front"
                    android:gravity="center"
                    android:text="@string/card_number_sample"
                    android:textColor="@color/card_text_color"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/cardholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_card_number"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="160dp"
                android:text="CARDHOLDER NAME"
                android:textColor="@android:color/white"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_member_name"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="180dp"
                android:forceHasOverlappingRendering="false"
                android:gravity="center"
                android:text=""
                android:textAllCaps="true"
                android:textColor="@color/card_text_color"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_validity_label"
                    android:textColor="@color/card_text_color"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tv_validity"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="13dp"
                    android:text="@string/card_validity_sample"
                    android:textColor="@color/card_text_color"
                    android:textSize="13sp" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

