<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:openDrawer="start"
    android:fitsSystemWindows="true"
    android:id="@+id/drawerLayout"
    tools:context=".Fragments.HomeFragment">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        app:menu="@menu/menu_drawer"
        android:layout_gravity="end"
        android:theme="@style/navigationTheme"
        android:layoutDirection="ltr"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="6dp"
            android:padding="8dp"
            android:weightSum="4">

            <ImageView
                android:id="@+id/card_view_cart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/shopping_cart_1" />


            <com.nex3z.notificationbadge.NotificationBadge
                android:id="@+id/notification_badge"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_alignStart="@+id/cart_icon"
                android:layout_marginRight="12dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/txt_cart_title"
                android:hapticFeedbackEnabled="false"
                app:nbBackground="@drawable/badge_background"
                app:nbMaxTextLength="2">

            </com.nex3z.notificationbadge.NotificationBadge>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:src="@drawable/zgbeautyandhair" />

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom|fill"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/navigation"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="4">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:orientation="vertical"
                android:weightSum="3.4">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0.9"
                    android:visibility="gone"
                    app:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/txt_cart_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/oswald_regular"
                            android:text="עגלת קניות"
                            tools:ignore="NotSibling" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_booking_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:visibility="gone"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/btn_register_background"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="70dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_event_available" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/rubik"
                            android:textColor="@android:color/black"
                            android:text="מידע לגבי תור קיים"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@android:color/black"
                            android:fontFamily="@font/rubik"
                            android:paddingLeft="5dp"
                            android:textSize="16sp"
                            android:text="@string/time_bullet" />

                        <TextView
                            android:id="@+id/txt_time"
                            android:layout_marginTop="10dp"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Time"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:paddingLeft="5dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/rubik"
                            android:text="@string/stylelist_bullet" />

                        <TextView
                            android:id="@+id/txt_salon_barber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="David"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:paddingLeft="5dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/rubik"
                            android:text="@string/address_bullet" />

                        <TextView
                            android:id="@+id/txt_salon_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="Address Salon"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:paddingLeft="5dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/rubik"
                            android:text="@string/bullet" />

                        <TextView
                            android:id="@+id/txt_time_remain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="Time"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:paddingLeft="5dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/rubik"
                            android:text="@string/status" />

                        <TextView
                            android:id="@+id/txt_order_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="status"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/btn_change_booking"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="1"
                            android:textColor="@android:color/white"
                            android:background="@drawable/button_border_bg"
                            android:text="שינוי" />

                        <Button
                            android:id="@+id/btn_delete_booking"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="1"
                            android:textColor="@android:color/white"
                            android:background="@drawable/button_border_bg"
                            android:text="מחיקה" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ss.com.bannerslider.Slider
                android:id="@+id/banner_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_look_book"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal" />


            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>